# ZephyrSkeleton

./: .gitignore  CMakeLists.txt  README.md  main.c  prj.conf  west.yml
boards/: CMakeLists.txt  bbc_microbit.overlay  bbc_microbit_v2.overlay  nucleo_f401re.overlay  rpi_pico.overlay
boards/bbc/: sample.c  west_microbit.yml
boards/bbc/microbit/: CMakeLists.txt  bbc_microbit.c  prj.conf
boards/bbc/microbit_v2/: CMakeLists.txt  bbc_microbit_v2.c  prj.conf
boards/raspberrypi/rpi_pico/: west_rpi_pico.yml
boards/st/: CMakeLists.txt  nucleo_f401re.c  west_stm32_m33.yml
core/: CMakeLists.txt  main.c
drivers/: CMakeLists.txt
drivers/beep/: CMakeLists.txt  drv_beep_manipulator.c
drivers/ble/: CMakeLists.txt  drv_ble_common.c  drv_ble_peripheral.c
drivers/ble/services/: CMakeLists.txt  drv_ble_battery.c  drv_ble_heartrate.c
drivers/button/: CMakeLists.txt  drv_button_microbit.c  drv_button_nucleo.c
drivers/display/: CMakeLists.txt  drv_disp_microbit.c
drivers/led/: CMakeLists.txt
drivers/led/display/: CMakeLists.txt  drv_disp_microbit.c
drivers/sensor/: CMakeLists.txt
drivers/sensor/accel/: CMakeLists.txt  drv_accel_lis2dh.c
drivers/sensor/magnet/: CMakeLists.txt  drv_magn_lis2mdl.c
global/: CMakeLists.txt  gbf_sample_database.c  gbf_sensor_database.c
include/boards/: unique.h
include/boards/bbc/microbit/: bbc_microbit.h
include/boards/bbc/microbit_v2/: bbc_microbit_v2.h
include/boards/st/: nucleo_f401re.h
include/drivers/beep/: drv_beep_manipulator.h
include/drivers/ble/: drv_ble_peripheral.h
include/drivers/ble/services/: drv_ble_battery.h  drv_ble_heartrate.h
include/drivers/button/: drv_button_microbit.h  drv_button_nucleo.h
include/drivers/display/: drv_disp_microbit.h
include/drivers/led/display/: drv_disp_microbit.h
include/drivers/sensor/accel/: drv_accel_lis2dh.h
include/drivers/sensor/magnet/: drv_magn_lis2mdl.h
include/global/: gbf_sample_database.h  gbf_sensor_database.h
include/utils/shell/: shl_log_operator.h
scripts/: build.sh  setup.bat  setup.sh
scripts/dos/: build.bat  debug.bat
scripts/linux/: build.sh  debug.bat  debug.sh
utils/: CMakeLists.txt
utils/shell/: CMakeLists.txt  shl_exec_drivers.c  shl_log_operator.c
