# Copyright (c) 2024 Takayuki Goto <tkg.develop@gmail.com>
# SPDX-License-Identifier: Apache-2.0

cmake_minimum_required(VERSION 3.13.1)

add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/beep)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/ble)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/button)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/display)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/led)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/sensor)
